examples/test/testpolicy9866.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9866
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key20: value47
      key24: value24
      key45: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value7
          key30: value16
          key2: value28
      podSelector:
        matchLabels:
          key19: value24
          key23: value36
